# arkanoid

./: LICENSE  README.md  pyproject.toml
arkanoid/: config.py  engine.py  main.py
arkanoid/levels/: Cascade.yaml  Inferno.yaml  Nexus.yaml  Odyssey.yaml  Velocity.yaml
